codegen/tests/snapshots/codegen__exec_test-15.snap
---
source: codegen/tests/codegen.rs
assertion_line: 37
expression: mach_module
---
  .text
  .intel_syntax noprefix
  .globl fibo
fibo:
.LBL0_0:
  push rbp
  mov rbp, rsp
  sub rsp, 16
  mov eax, edi
  mov dword ptr [rbp-12], eax
  mov eax, dword ptr [rbp-12]
  cmp eax, 2
  jle .LBL0_1
  jmp .LBL0_2
.LBL0_1:
  mov dword ptr [rbp-4], 1
  jmp .LBL0_3
.LBL0_2:
  mov edi, dword ptr [rbp-12]
  sub edi, 1
  call fibo
  mov dword ptr [rbp-8], eax
  mov edi, dword ptr [rbp-12]
  sub edi, 2
  call fibo
  mov ecx, dword ptr [rbp-8]
  add ecx, eax
  mov dword ptr [rbp-4], ecx
  jmp .LBL0_3
.LBL0_3:
  mov eax, dword ptr [rbp-4]
  add rsp, 16
  pop rbp
  ret 
  .globl main
main:
.LBL1_0:
  push rbp
  mov rbp, rsp
  sub rsp, 16
  mov dword ptr [rbp-4], 0
  mov edi, 10
  call fibo
  add rsp, 16
  pop rbp
  ret 

